src/test/ui/const-generics/array-size-in-generic-struct-param.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/array-size-in-generic-struct-param.rs:8:38
   |
LL | struct ArithArrayLen<const N: usize>([u32; 0 + N]);
   |                                      ^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/array-size-in-generic-struct-param.rs:19:10
   |
LL |     arr: [u8; CFG.arr_size],
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors

